/**
 * Filename: DebugConfig.cs
 * Copyright (C) Anh Hoang Nguyen, AAANH Corporation. All rights reserved.
 */
namespace Engine.Library;

public static class DebugConfig
{
  public static bool VerboseMode { get; set; } = false;
}